--- a/public/static/css/testi.css
+++ b/public/static/css/testi.css
@@ -6,9 +6,9 @@
 .testimonials {
     background: #fff;
     text-align: center;
-    width: 90%;
-    max-width: 600px;
-    padding: 2rem;
+    /* width: 90%; */
+    /* max-width: 600px; */
+    padding: 1rem;
     /* height: 100%; */
     margin: 1.5rem auto;
     /* box-shadow: 0 0 25px rgba(0, 0, 0, 0.15); */
